syntax = "proto3";

package bfx;

message DateTime {
  int32 year = 1;
  uint32 ordinal = 2;
  uint32 second = 3;
  uint32 nanos = 4;
}

message UserContext {
  string ip = 1;
  string user_agent = 2;
  string lang_id = 3;
}

message ParamValue {
  oneof param_value {
    string string = 1;
    int64 number = 2;
  }
}
